push form update dan global.css2

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -990,10 +990,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
     width: 25%;
   }
 
-  .contentOurBrand2{
-    /* padding-left: 10rem; */
-  }
-
   .containerBrand2{
     width: 35%;
   }
@@ -1382,7 +1378,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .scroll p {
   font-size: 5em;
-  color: black;
+  color: #ffffff;
   font-weight: bold;
   margin-top: 5vh;
   margin-bottom: 5vh;
