--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1374,19 +1374,21 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .scroll div {
   display: flex;
   gap: 2em;
+  justify-content: center;
 }
 
 .scroll p {
-  font-size: 5em;
-  color: black;
+  font-size: 3em;
+  color: white;
+  text-shadow: 0 0 3px #6a80bc, 0 0 5px #6a80bc;
   font-weight: bold;
-  margin-top: 5vh;
-  margin-bottom: 5vh;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
   line-height: 10px;
 }
 
 .RightToLeft {
-  animation: RightToLeft 20s infinite linear;
+  animation: RightToLeft 30s infinite linear;
 }
 
 .RightToLeft p {
@@ -1395,15 +1397,15 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 @keyframes  RightToLeft {
   from {
-    transform: translateX(200%);
+    transform: translateX(120%);
   }
   to {
-    transform: translateX(-200%);
+    transform: translateX(-120%);
   }
 }
 
 .LeftToRight {
-  animation: LeftToRight 20s infinite linear;
+  animation: LeftToRight 30s infinite linear;
 }
 
 .LeftToRight p {
@@ -1412,10 +1414,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 @keyframes  LeftToRight {
   from {
-    transform: translateX(-200%);
+    transform: translateX(-120%);
   }
   to {
-    transform: translateX(200%);
+    transform: translateX(120%);
   }
 }
 
@@ -1435,4 +1437,14 @@ Note: Beware of modifying this element as it can break the animations - you shou
   cursor: pointer;
   margin: 5px 0;
   padding: 2px;
+}
+
+.scroll-caption {
+  width: 100vw;
+  text-align: center;
+}
+
+.scroll-caption h1 {
+  font-family: 'Titan One';
+  font-size: 3rem;
 }
