masih blm bisa server.js

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1440,6 +1440,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .scroll-caption {
+  padding-top: 1rem;
   width: 100vw;
   text-align: center;
 }
